# libdicomicc

./: .gitignore  .npmignore  BUILDING.md  CMakeLists.txt  Makefile.am  README.md  build-native.sh  build-wasm.sh  build.sh  config.h.in  configure.ac  package.json
.github/workflows/: publish.yml  run_unit_tests.yml
.webpack/: webpack.config.js
examples/dicom/: CMakeLists.txt  example.c
libdicom/src/: dicom-data.c  dicom-dict.c  dicom-file.c
libdicomicc/: CMakeLists.txt  config.h.in
libdicomicc/examples/dicom/: example.c
libdicomicc/lcms2/: CMakeLists.txt
libdicomicc/lcms2/src/: cmsxform.c
libdicomicc/libdicom/: CMakeLists.txt
libdicomicc/libdicom/src/: dicom.c
libdicomicc/src/: icc.c  icc.h
src/: CMakeLists.txt  ICCCMSTransform.hpp  README.md  dicomicc.c  dicomicc.h  icc.c  icc.h  jslib.cpp
src/.deps/: libicc_la-icc.Plo
test/browser/: index.html
wasm/: CMakeLists.txt  ColorManager.hpp  FrameInfo.hpp  ICCCMSTransform.hpp  jslib.cpp
wasm/examples/browser/: index.html
wasm/src/: ColorManager.hpp  FrameInfo.hpp  jslib.cpp
